src/objects/c2g__codaTaxCode__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptaxcode</customHelpPage>
    <description>Stores details on tax codes.</description>
    <fields>
        <fullName>c2g__ChildTaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GST Child Tax Code</description>
        <label>GST</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (first child)</relationshipLabel>
        <relationshipName>ChildTaxCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChildTaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PST/QST Child Tax Code</description>
        <label>PST/QST</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (second child)</relationshipLabel>
        <relationshipName>ChildTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The General Ledger Account</description>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Tax Codes (General Ledger Account)</relationshipLabel>
        <relationshipName>TaxCodesGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Tax Group</label>
        <picklist>
            <picklistValues>
                <fullName>Tax Group 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TaxModel__c</fullName>
        <description>Tax Model</description>
        <label>Tax Model</label>
        <picklist>
            <picklistValues>
                <fullName>HST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST &amp; GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST &amp; QST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__NetBox__c</fullName>
        <label>Net Box</label>
        <picklist>
            <picklistValues>
                <fullName>Box 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffvat__TaxBox__c</fullName>
        <label>Tax Box</label>
        <picklist>
            <picklistValues>
                <fullName>Box 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tax Code</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__TaxGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>